--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             
             <div class="pricing-grid">
                 <div class="price-card" onclick="selectPackage(this)">
-                    <div class="price-icon" style="color: #cd7f32;"><i class="fas fa-medal"></i></div>
+                    <div class="price-icon" style="color: #cd7f32;"><i></i></div>
                     <h3>Bronza</h3>
                     <div class="price-amount">Bepul</div>
                     <ul class="features-list">
@@ -128,7 +128,7 @@
                 </div>
 
                 <div class="price-card" onclick="selectPackage(this)">
-                    <div class="price-icon" style="color: #94a3b8;"><i class="fas fa-medal"></i></div>
+                    <div class="price-icon" style="color: #94a3b8;"><i></i></div>
                     <h3>Kumush</h3>
                     <div class="price-amount">50,000 so'm/oy</div>
                     <ul class="features-list">
@@ -141,7 +141,7 @@
                 </div>
 
                 <div class="price-card" onclick="selectPackage(this)">
-                    <div class="price-icon" style="color: #f59e0b;"><i class="fas fa-crown"></i></div>
+                    <div class="price-icon" style="color: #f59e0b;"><i></i></div>
                     <h3>Oltin</h3>
                     <div class="price-amount">100,000 so'm/oy</div>
                     <ul class="features-list">
@@ -224,4 +224,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
