--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="top-bar">Bepul yetkazib berish 500,000 so'mdan yuqori buyurtmalarga!</div>
-
     <header>
         <div class="nav-container">
             <div class="logo">
@@ -116,7 +114,7 @@
             
             <div class="pricing-grid">
                 <div class="price-card" onclick="selectPackage(this)">
-                    <div class="price-icon" style="color: #cd7f32;"><i></i></div>
+                    <div class="price-icon" style="color: #cd7f32;"></div>
                     <h3>Bronza</h3>
                     <div class="price-amount">Bepul</div>
                     <ul class="features-list">
@@ -128,7 +126,7 @@
                 </div>
 
                 <div class="price-card" onclick="selectPackage(this)">
-                    <div class="price-icon" style="color: #94a3b8;"><i></i></div>
+                    <div class="price-icon" style="color: #94a3b8;"></div>
                     <h3>Kumush</h3>
                     <div class="price-amount">50,000 so'm/oy</div>
                     <ul class="features-list">
@@ -141,7 +139,7 @@
                 </div>
 
                 <div class="price-card" onclick="selectPackage(this)">
-                    <div class="price-icon" style="color: #f59e0b;"><i></i></div>
+                    <div class="price-icon" style="color: #f59e0b;"></div>
                     <h3>Oltin</h3>
                     <div class="price-amount">100,000 so'm/oy</div>
                     <ul class="features-list">
@@ -173,7 +171,7 @@
                 <div class="contact-info">
                     <p><i class="fas fa-map-marker-alt"></i> Toshkent sh., Amir Temur ko'chasi 108</p>
                     <p><i class="fas fa-phone-alt"></i> +998 71 200 00 00</p>
-                    <p><i class="fas fa-envelope"></i> info@techhouse.uz</p>
+                    <p><i class="fas fa-envelope"></i> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="6d04030b022d19080e050502181e08431817">[email&#160;protected]</a></p>
                 </div>
             </div>
 
@@ -217,12 +215,4 @@
         </div>
 
         <div class="footer-bottom">
-            <p>&copy; 2026 Tech_House. ZIMI.DEV tomonidan ishlab chiqigan.</p>
-        </div>
-    </div>
-</footer>
-
-    <script src="script.js"></script>
-</body>
-
-</html>
+            <p>&copy; 2026 Tech_House. ZIMI.DEV tomon
