--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         }
         
         .contact-info {
-            background: white;
+
             padding: 40px;
             border-radius: var(--radius);
             box-shadow: var(--shadow);
@@ -242,8 +242,6 @@
     </style>
 </head>
 <body>
-    <div class="top-bar">Bepul yetkazib berish 500,000 so'mdan yuqori buyurtmalarga!</div>
-
     <header>
         <div class="nav-container">
             <div class="logo">
@@ -303,8 +301,8 @@
                     </div>
                     <div class="info-details">
                         <h3>Email</h3>
-                        <p>info@techhouse.uz</p>
-                        <p>support@techhouse.uz</p>
+                        <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="b4dddad2dbf4c0d1d7dcdcdbc1c7d19ac1ce">[email&#160;protected]</a></p>
+                        <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="1e6d6b6e6e716c6a5e6a7b7d7676716b6d7b306b64">[email&#160;protected]</a></p>
                     </div>
                 </div>
                 
@@ -489,19 +487,73 @@
         </div>
     </div>
 
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 Tech House. Barcha huquqlar himoyalangan.</p>
-            <p style="margin-top: 10px; font-size: 0.9rem;">Manzil: Toshkent sh., Amir Temur ko'chasi 108 | Tel: +998 71 200 00 00</p>
+    <footer class="main-footer">
+    <div class="container">
+        <div class="footer-grid">
+            <div class="footer-col">
+                <div class="footer-logo">
+                    <i class="fas fa-cube"></i> Tech House
+                </div>
+                <p class="footer-desc">2015-yildan beri xonadoningizga shinamlik va zamonaviy texnologiyalarni olib kiramiz.</p>
+                <div class="contact-info">
+                    <p><i class="fas fa-map-marker-alt"></i> Toshkent sh., Amir Temur ko'chasi 108</p>
+                    <p><i class="fas fa-phone-alt"></i> +998 71 200 00 00</p>
+                    <p><i class="fas fa-envelope"></i> info@techhouse.uz</p>
+                </div>
+            </div>
+
+            <div class="footer-col">
+                <h3>Xaridorlarga</h3>
+                <ul>
+                    <li><a href="products.html">Barcha mahsulotlar</a></li>
+                    <li><a href="#">Yetkazib berish</a></li>
+                    <li><a href="#">Muddatli to'lov</a></li>
+                    <li><a href="#">Kafolat va qaytarish</a></li>
+                    <li><a href="#">Savol-javoblar (FAQ)</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-col">
+                <h3>Ommabop bo'limlar</h3>
+                <ul>
+                    <li><a href="products.html?category=oshxona">Oshxona jihozlari</a></li>
+                    <li><a href="products.html?category=aqlli">Aqlli uy tizimi</a></li>
+                    <li><a href="products.html?category=isitish">Konditsionerlar</a></li>
+                    <li><a href="products.html?category=tozalash">Changyutgichlar</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-col">
+                <h3>Bizni kuzatib boring</h3>
+                <div class="social-links">
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-telegram"></i></a>
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                </div>
+                <h3 style="margin-top: 20px;">To'lov turlari</h3>
+                <div class="payment-methods">
+                    <i class="fab fa-cc-visa"></i>
+                    <i class="fab fa-cc-mastercard"></i>
+                    <img src="https://api.logobank.uz/media/logos_preview/Uzcard-01.png" alt="Uzcard" width="40">
+                    <img src="https://humocard.uz/upload/medialibrary/208/8x0p9hi3h9jww0flwdm92dayhn0flulj/humo-logo-more.png" alt="Humo" width="40">
+                </div>
+            </div>
         </div>
-    </footer>
+
+        <div class="footer-bottom">
+            <p>&copy; 2026 Tech_House. ZIMI.DEV tomonidan ishlab chiqildi.</p>
+        </div>
+    </div>
+</footer>
 
     <script src="script.js"></script>
     <script>
-        function handleContactForm(event) {
-            event.preventDefault();
-            event.target.reset();
-        }
+        document.getElementById('contactForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            alert('Xabaringiz qabul qilindi! Tez orada siz bilan bog\'lanamiz.');
+            this.reset();
+        });
     </script>
 </body>
 </html>
