--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="top-bar">Bepul yetkazib berish 500,000 so'mdan yuqori buyurtmalarga!</div>
+
     <header>
         <div class="nav-container">
             <div class="logo">
@@ -171,7 +173,7 @@
                 <div class="contact-info">
                     <p><i class="fas fa-map-marker-alt"></i> Toshkent sh., Amir Temur ko'chasi 108</p>
                     <p><i class="fas fa-phone-alt"></i> +998 71 200 00 00</p>
-                    <p><i class="fas fa-envelope"></i> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="6d04030b022d19080e050502181e08431817">[email&#160;protected]</a></p>
+                    <p><i class="fas fa-envelope"></i> info@techhouse.uz</p>
                 </div>
             </div>
 
@@ -215,4 +217,11 @@
         </div>
 
         <div class="footer-bottom">
-            <p>&copy; 2026 Tech_House. ZIMI.DEV tomon
+            <p>&copy; 2026 Tech_House. ZIMI.DEV tomonidan ishlab chiqi.</p>
+        </div>
+    </div>
+</footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
